# python-boilerplate

./: .env.example  README.md  pyproject.toml
.clinerules/: 00-core-principles.md  01-development-workflow.md  02-task-management.md  03-code-standards.md  04-testing-approach.md  05-documentation.md
.devcontainer/: Dockerfile  devcontainer.json
clinerules-bank/languages/python/: coding-style.md  testing-guidelines.md
